<resources>
    <string name="app_name">OfficeManagement</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account_text">Don\'t have an account? Create a new one</string>
    <string name="registration">Registration</string>
    <string name="already_member">Already a member? Login here.</string>
    <string name="veify_otp">Verify OTP</string>
    <string name="enter_otp">Enter the OTP we just sent to your mobile number</string>
    <string name="timer">00:30</string>
    <string name="resend_otp">Didn\'t recieve OTP? Resend OTP</string>
    <string name="get_started">Get started with TFEAST</string>
    <string name="enter_number">Enter your mobile number</string>
    <string name="login_successful">Login successful</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="add_task">Add your daily task</string>
    <string name="task_inserted">Task inserted</string>
    <string name="logout">Log out</string>
    <string name="update_task">Update task</string>
    <string name="delete">Delete</string>
    <string name="task_updated">Task updated</string>
    <string name="task_removed">Task removed</string>
</resources>