<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_design"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/update_task"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/title_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/title_update_edttxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/note_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Note" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/note_update_edttxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:layout_weight="1"
                        android:id="@+id/delete_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_design"
                        android:text="@string/delete"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/update_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_design"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </LinearLayout>

    </ScrollView>

</LinearLayout>